[package]
name = "nrf52"
version = "0.1.0"
authors = ["Tock Project Developers <tock-dev@googlegroups.com>"]

[dependencies]
cortexm4 = { path = "../../arch/cortex-m4" }
kernel = { path = "../../kernel" }
bitfield = "0.11.0"
serde = { version = "1.0.27", default-features = false }
serde_derive = { version = "1.0.27", default-features = false }

[dependencies.nrf5x]
path = "../nrf5x"
features = ["nrf52"]
